# LidarBathySeg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: example_3d.ipynb
src/lidarbathyyseg/: __init__.py  chunking.py  classification.py  gmm.py  io.py  lidar_analysis.py  pipeline.py  preprocessing.py  segmentation.py  surface.py  utils.py  visualization.py
