[project]
name = "lidarbathyseg"
version = "0.1.0"
description = "LiDAR Bathymetry Segmentation utilities"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "laspy[lazrs]>=2.5.1",
    "lazrs>=0.5.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "plotly>=5.20",
    "joblib>=1.3"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
