[project]
name = "lidarbathyseg"
version = "1.1"
description = "LiDAR Bathymetry Segmentation – GMM-based water/seabed separation"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "laspy[lazrs]>=2.5.1",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "plotly>=5.20",
    "joblib>=1.3",
    "pandas>=2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
